<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".EditUserActivity">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="Email"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/address_placeholder"
        android:inputType="text" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/countryCodePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="left"
        app:ccp_defaultNameCode="ES"
        app:ccp_showArrow="true"
        app:ccp_showFlag="true"
        app:ccp_showFullName="false"
        app:ccp_showNameCode="false"
        app:ccp_showPhoneCode="true" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/phone_placeholder"
        android:inputType="text"
        android:maxLength="15" />

    <Button
        android:id="@+id/btnSeleccionarDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/seleccionar_direccion" />

    <ImageView
        android:id="@+id/imgUsuario"
        android:layout_width="125dp"
        android:layout_height="125dp" />

    <Button
        android:id="@+id/btnSeleccionarImagen"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/seleccionar_imagen" />

    <Button
        android:id="@+id/btnGuardarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/guardar" />
</LinearLayout>